fix: auth-spinner aligned center

--- a/apps/naris/src/app/pages/login/auth/auth.component.scss
+++ b/apps/naris/src/app/pages/login/auth/auth.component.scss
@@ -2,4 +2,5 @@ nz-spin {
     position: fixed;
     top: 50%;
     left: 50%;
+    transform: translate(-50%,-50%);
 }
